fix bootstrap grid for mobile display so that the logo is not too big. also format the menu items in the navigation so that they line up to the right.

--- a/assets/styles/partials/_navigation.scss
+++ b/assets/styles/partials/_navigation.scss
@@ -88,7 +88,7 @@
 	    padding-top: 30px;
 	    margin-bottom: 22px;
 	    float: left;
-	    text-align: center;
+	    text-align: right;
 	    width: 100%;
 	  }
 	}
